--- a/H5 详解/H5新特性/Json的新方法.html
+++ b/H5 详解/H5新特性/Json的新方法.html
@@ -15,12 +15,12 @@
 			parse : 只能解析JSON形式的字符串变成js（安全性更高）
 			
 			*/
-			/*var str = '{"name":"che","age":"20"}' //一定是严格的json形式，key，value都要加上引号
+			var str = '{"name":"che","age":"20"}' //一定是严格的json形式，key，value都要加上引号
 			var json = JSON.parse(str);
 			console.log(json.name);
-			var str2 = {"name":"che","age":"20"};
-			var json2 = JSON.stringify(str2);
-			console.log(json2);*/
+			//var str2 = {"name":"che","age":"20"};
+			//var json2 = JSON.stringify(str2);
+			//console.log(json2);
 			
 /*			var a = { 'name':'hello' };
 			var b = a;
