--- a/angular/ag_demo1/angular标签指令扩展.html
+++ b/angular/ag_demo1/angular标签指令扩展.html
@@ -10,6 +10,10 @@
 			 - <a>
 			 - ng-options
 			 > for in
+			 - <textarea>
+			 - <input>
+			 - <form>
+			 > novalidate 去掉表单的默认样式
 			*/
 			var m1 = angular.module('myApp',[]);
 			m1.controller('Nice',['$scope',function($scope){
