--- a/angular/ag_demo1/angular选项卡.html
+++ b/angular/ag_demo1/angular选项卡.html
@@ -50,7 +50,7 @@
 						myFn:'&'
 					}, //隔离作用域
 					controller:['$scope',function($scope){
-						$scope.name = 'cheshuang'; //z这里一般存放共享的数据
+						$scope.name = 'cheshuang'; //这里一般存放共享的数据
 					}],
 					templateUrl:'temp.html'
 				}
