--- a/react/hello_react.html
+++ b/react/hello_react.html
@@ -22,21 +22,21 @@
 	/*
 	ReactDOM.render()
 	React的最基本的方法，用于将模板转换成HTML语言，渲染DOM，并插入指定的DOM节点中
-	
+
 	3个参数
 	第一个：模板的渲染内容(HTML形式)
 	第二个：这段模板需要插入的DOM节点(本程序中，是id为container的div节点)
 	第三个：渲染后的回调，一般不用
-	
+
 	*/
 //	ReactDOM.render(
 //		<h1>Hello React</h1>,
 //		document.getElementById("container")
 //	);
-	
+
 	/*
 	JSX 不是一门新的语言,是个语法（语法糖）
-	
+
 	1、JSX必须借助react环境运行
 	2、JSX标签其实就是HTML标签，只不过我们在js中书写这些标签的时候不用“”括起来
 	3、转换：JSX语法能够让我们更直观看到组件的DOM结构，不能直接在浏览器中运行，最终会转化为js代码，在浏览器中运行
@@ -48,7 +48,7 @@
 	//使用{}括起来 {表达式}
 	5、例如：属性，设置样式，事件绑定
 	*/
-	var text = "车爽";
+	var text = "cheshuang";
 	ReactDOM.render(
 		<h1>{text}</h1>,
 		document.getElementById("container")
