--- a/react/组件/props和children.html
+++ b/react/组件/props和children.html
@@ -105,11 +105,15 @@
 	ReactDOM.render(
 		(
 			<ListComponent>
-				<h1>百度</h1>
-				<a href="http://baidu.com">百度地址</a>
-				<ListComponent>
+				<div>
 					<h1>百度</h1>
 					<a href="http://baidu.com">百度地址</a>
+				</div>
+				<ListComponent>
+					<div>
+						<h1>百度</h1>
+						<a href="http://baidu.com">百度地址</a>
+					</div>
 				</ListComponent>
 			</ListComponent>
 			
