--- a/angular/ag_demo1/angularJs数据优化10.html
+++ b/angular/ag_demo1/angularJs数据优化10.html
@@ -32,7 +32,7 @@
 			<div ng-bind-template = '{{text}},{{text}}'></div>
 			<div ng-bind-html = 'text'></div>-->
 			<div ng-cloak>{{text2}}</div>
-			<div ng--non-bindable>{{text2}}</div>
+			<div ng-non-bindable>{{text2}}</div>
 		</div>
 		<script>
 			//alert(1);
